math-core/src/snapshots/math_core__tests__genfrac_1pt.snap
---
source: math-core/src/lib.rs
expression: "\\genfrac(]{1pt}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="0.1em">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo>+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
