math-core/src/snapshots/math_core__tests__genfrac_4em.snap
---
source: math-core/src/lib.rs
expression: "\\genfrac(]{4em}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="4em">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo>+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
