math-core/src/snapshots/math_core__tests__genfrac_wrong_unit.snap
---
source: math-core/src/lib.rs
expression: "\\genfrac(]{1pg}{2}{a+b}{c+d}"
---
Position: 10
ExpectedLength(
    "1pg",
)
