math-core/src/snapshots/math_core__tests__greater_than.snap
---
source: math-core/src/lib.rs
expression: x > y
---
<math>
    <mi>x</mi>
    <mo>&gt;</mo>
    <mi>y</mi>
</math>
