math-core/src/snapshots/math_core__tests__greek_letter_boldsymbol.snap
---
source: math-core/src/lib.rs
expression: "\\boldsymbol{\\alpha}"
---
<math>
    <mi>𝜶</mi>
</math>
