math-core/src/snapshots/math_core__tests__greek_letter_tf.snap
---
source: math-core/src/lib.rs
expression: "\\Gamma\\varGamma\\boldsymbol{\\Gamma\\varGamma}"
---
<math>
    <mi mathvariant="normal">Γ</mi>
    <mi>Γ</mi>
    <mrow>
        <mi>𝚪</mi>
        <mi>𝜞</mi>
    </mrow>
</math>
