math-core/src/snapshots/math_core__tests__greek_letters.snap
---
source: math-core/src/lib.rs
expression: "\\phi/\\varphi"
---
<math>
    <mi>ϕ</mi>
    <mi>/</mi>
    <mi>φ</mi>
</math>
